<resources>
    <string name="app_name">AulaFasb2019</string>
    <string name="app_ola">Olá turma de GTI 2019</string>
    <string name="labelbtn1">Chama tela 2</string>
    <string name="labelbtn2">Volta tela 1</string>
    <string name="labelbtn3">Voltar</string>
    <string name="labelbtn4">Adicionar</string>

    <string name="config_email">Informe seu e-mail</string>
    <string name="config_listanome">Grupo de Disciplina</string>
    <string name="config_nome">Configuração</string>
    <string name="config_check">Mostrar o e-mail?</string>

    <string name="resultado_lab_titulo">Cadastrar Curso</string>
    <string name="resultado_lab_titulo_alt">Alterar Curso</string>
    <string name="resultado_lab_nome_curso">Nome do Curso</string>
    <string name="resultado_lab_nome_imagem">Selecione a imagem</string>
    <string name="resultado_lab_nome_salvar">Salvar Curso</string>
    <string name="resultado_lab_nome_del">Apagar Curso</string>

    <array name="resultado_lista_imagens">
        <item>@drawable/ic_acorda</item>
        <item>@drawable/ic_battery</item>
        <item>@drawable/ic_programa</item>
    </array>

    <array name="ListaGti">
        <item>Algoritmo</item>
        <item>Banco de Dados I</item>
        <item>Banco de Dados II</item>
        <item>Ética</item>
        <item>Legislação Aplicada a Técnologia</item>
        <item>Programação I</item>
        <item>Programação II</item>
        <item>Governacia de TI</item>
        <item>Topicos Avançados I</item>
        <item>Topicos Avançados II</item>
        <item>Estágio I</item>
        <item>Estágio II</item>
        <item>Segurança da Informação</item>
    </array>


<!--    dialog deletar-->
    <string name="dialogConfirma">Confirma</string>
    <string name="dialogConfirmaMsg">Você deseja realmente apagar esse registro?</string>
    <string name="dialogConfirmaSim">Sim</string>
    <string name="dialogConfirmaNao">Não</string>

</resources>
