<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".resultado">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_lab_titulo"
        android:gravity="center"
        android:id="@+id/resultado_status_label"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_lab_nome_curso"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultado_edit_curso"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_lab_nome_imagem"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/resultado_lista_imagens"
        android:id="@+id/resultado_edit_imagem"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/resultado_lab_nome_salvar"
            android:id="@+id/resultado_salvar"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/colorG"
            android:text="@string/resultado_lab_nome_del"
            android:id="@+id/resultado_del"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btnTela3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/labelbtn3"
        android:onClick="fechar" />

    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:weightSum="2"-->
<!--        android:layout_margin="5dp"-->
<!--        android:layout_height="500dp">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:background="@color/colorFundo"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_margin="5dp"-->
<!--            android:gravity="center"-->
<!--            android:layout_height="0dp">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/app_ola"-->
<!--                android:textSize="40dp"-->
<!--                android:textStyle="bold"-->
<!--                android:id="@+id/LabelResult"/>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:background="@color/colorAccent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_margin="5dp"-->
<!--            android:weightSum="2"-->
<!--            android:layout_height="0dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:layout_height="match_parent">-->

<!--                <Button-->
<!--                    android:id="@+id/btnTela3"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/labelbtn3"-->
<!--                    android:onClick="fechar" />-->

<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:weightSum="2"-->
<!--                android:layout_margin="5dp"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_height="match_parent">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:background="@color/colorG"-->
<!--                    android:layout_height="0dp">-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:textSize="40dp"-->
<!--                        android:text="@string/app_name"-->
<!--                        android:id="@+id/textoIdResultado"-->
<!--                        android:layout_gravity="center">-->

<!--                    </TextView>-->

<!--                </LinearLayout>-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:background="@color/colorH"-->
<!--                    android:layout_height="0dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:id="@+id/iconeResultado"-->
<!--                        android:src="@mipmap/ic_gti_img">-->

<!--                    </ImageView>-->
<!--                </LinearLayout>-->
<!--            </LinearLayout>-->
<!--        </LinearLayout>-->

<!--    </LinearLayout>-->


</LinearLayout>